--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -3,9 +3,9 @@ name = "GPUScheduler"
 version = "1.0.1"
 description = "Code that queues and schedules jobs to run across multiple GPUs in PyTorch"
 dependencies = [
-  "torch>=2.3.1+cu118",
-  "torchaudio>=2.3.1+cu118",
-  "torchvision>=0.18.1+cu118",
+  "torch>=2.3.1",
+  "torchaudio>=2.3.1",
+  "torchvision>=0.18.1",
 ]
 
 
